[metadata]
name = dashio
description = DashIO interface library
author = James Boulton
author_email="james@dashio.com"
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
url="https://dashio.io"
download_url = "https://github.com/dashio-connect/python-dashio"
long_description = long_description
long_description_content_type = "text/markdown"

[options]
packages =
    dashio
install_requires =
    paho-mqtt
    pyzmq
    python-dateutil
    zeroconf
    shortuuid
    pyserial

python_requires = >=3.7.0
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
dashio = py.typed

[flake8]
max-line-length = 260
per-file-ignores = __init__.py:F401